feat: add component word

--- a/hangman/style.scss
+++ b/hangman/style.scss
@@ -4,6 +4,7 @@
 @import "components/hint/hint";
 @import "components/currentState/currentState";
 @import "components/virtualKeyboard/virtualKeyboard";
+@import "components/word/word";
 
 * {
   margin: 0;
