--- a/hangman/style.css
+++ b/hangman/style.css
@@ -38,6 +38,41 @@ main {
   gap: 1rem;
 }
 
+.question {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.question__character {
+  --char-size: 2rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--char-size);
+  height: var(--char-size);
+  color: transparent;
+  border: 1px solid black;
+  border-radius: 0.3rem;
+}
+
+.question__character::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  width: 1rem;
+  height: 2px;
+  bottom: 0.1rem;
+  background-color: black;
+}
+
+.question__character[pressed] {
+  color: black;
+  background-color: aqua;
+}
+
 * {
   margin: 0;
   padding: 0;
