--- a/hangman/components/word/_word.scss
+++ b/hangman/components/word/_word.scss
@@ -31,7 +31,11 @@
   background-color: black;
 }
 
-.question__character[pressed] {
+.question__character[data-pressed] {
   color: black;
   background-color: aqua;
+}
+
+.question__character[data-pressed]::after {
+  content: none;
 }
