feat: add component currentState. Update component keyPress.

--- a/hangman/style.css
+++ b/hangman/style.css
@@ -38,6 +38,11 @@ main {
   gap: 1rem;
 }
 
+.current-state {
+  display: flex;
+  gap: 1rem;
+}
+
 .question {
   display: flex;
   justify-content: center;
