--- a/hangman/components/gallows/_gallows.scss
+++ b/hangman/components/gallows/_gallows.scss
@@ -1,18 +1,75 @@
 .gallows {
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
   flex: 0 1 30%;
-  height: 100%;
+  height: 20rem;
 }
 
 .gallows__img {
+  position: absolute;
   width: 100%;
+  aspect-ratio: 1/1;
 }
 
 .gallows__title {
+  position: absolute;
   text-transform: uppercase;
   text-align: center;
+  bottom: 0;
+}
+
+.gallows__head,
+.gallows__body,
+.gallows__l-arm,
+.gallows__r-arm,
+.gallows__l-leg,
+.gallows__r-leg {
+  position: absolute;
+  width: 100%;
+  aspect-ratio: 1/1;
+  opacity: 0;
+  z-index: -1;
+
+  transition-property: transform;
+  transition-duration: 800ms;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55)
+}
+
+.gallows__head {
+  transform: translateY(-5rem);
+}
+
+.gallows__body {
+  transform: translateY(10rem);
+}
+
+.gallows__l-arm {
+  transform: translateX(5rem);
+}
+
+.gallows__r-arm {
+  transform: translateX(-5rem);
+}
+
+.gallows__l-leg {
+  transform: translateX(5rem);
+}
+
+.gallows__r-leg {
+  transform: translateX(-5rem);
+}
+
+.gallows[head] .gallows__head,
+.gallows[body] .gallows__body,
+.gallows[l-arm] .gallows__l-arm,
+.gallows[r-arm] .gallows__r-arm,
+.gallows[l-leg] .gallows__l-leg,
+.gallows[r-leg] .gallows__r-leg {
+  opacity: 1;
+  z-index: 1;
+  transform: translate(0, 0);
 }
