feat: add modal with the game's result and reset state.

--- a/hangman/components/virtualKeyboard/_virtualKeyboard.scss
+++ b/hangman/components/virtualKeyboard/_virtualKeyboard.scss
@@ -40,3 +40,7 @@
 .virtual-keyboard__key[data-loose] {
   background-color: brown;
 }
+
+// .virtual-keyboard__key[data-loose][data-succes] {
+//   background-color: chartreuse !important;
+// }
