--- a/hangman/style.scss
+++ b/hangman/style.scss
@@ -5,6 +5,7 @@
 @import "components/currentState/currentState";
 @import "components/virtualKeyboard/virtualKeyboard";
 @import "components/word/word";
+@import "components/modal/modal";
 
 :root {
   --key-size: 2rem;
