--- a/hangman/components/gallows/_gallows.scss
+++ b/hangman/components/gallows/_gallows.scss
@@ -34,7 +34,7 @@
   opacity: 0;
   z-index: -1;
 
-  transition-property: transform;
+  transition-property: transform opacity z-index;
   transition-duration: 800ms;
   transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55)
 }
@@ -72,4 +72,4 @@
   opacity: 1;
   z-index: 1;
   transform: translate(0, 0);
-}
+  }
