--- a/hangman/components/currentState/_currentState.scss
+++ b/hangman/components/currentState/_currentState.scss
@@ -1,4 +1,17 @@
 .current-state {
   display: flex;
   gap: 1rem;
+  font-size: calc(var(--key-font-size) / 2);
+}
+
+@media (max-width: 1024px) {
+  .current-state {
+    font-size: calc(var(--key-font-size) * 0.75);
+  }
+}
+
+@media (max-width: 768px) {
+  .current-state {
+    font-size: 1.2rem;
+  }
 }
