--- a/hangman/components/main/_main.scss
+++ b/hangman/components/main/_main.scss
@@ -1,5 +1,5 @@
 main {
-  --max-width: 640px;
+  --max-width: 2400px;
   --min-width: 300px;
 
   display: flex;
@@ -9,5 +9,12 @@ main {
 
   width: clamp(var(--min-width), 100%, var(--max-width));
   margin: 0 auto;
+  padding: 1rem;
   height: 100%;
+}
+
+@media (max-width: 768px) {
+  main {
+    flex-direction: column;
+  }
 }
