--- a/hangman/components/word/_word.scss
+++ b/hangman/components/word/_word.scss
@@ -13,20 +13,23 @@
   width: var(--key-size);
   height: var(--key-size);
 
+  font-size: var(--key-font-size);
   color: transparent;
   border: 1px solid black;
   border-radius: 0.3rem;
+  user-select: none;
 }
 
 .question__character::after {
   content: "";
   position: absolute;
   display: inline-block;
-  width: 1rem;
-  height: 2px;
-  bottom: 0.1rem;
+  width: var(--key-font-size);
+  height: calc(var(--key-interval) / 2);
+  bottom: calc(var(--key-interval) / 2);
 
   background-color: black;
+  border-radius: var(--key-interval);
 }
 
 .question__character[data-pressed] {
