--- a/hangman/style.scss
+++ b/hangman/style.scss
@@ -8,8 +8,11 @@
 @import "components/modal/modal";
 
 :root {
-  --key-size: 2rem;
-  --key-interval: 0.5rem;
+  --key-size: clamp(2rem, calc(2rem + ((1vw - 0.1875rem) * 3.5398)), 7rem);
+  --key-interval: clamp(0.5rem, calc(0.5rem + ((1vw - 0.1875rem) * 0.354)), 1rem);
+  --key-font-size: clamp(1.5rem, calc(1.5rem + ((1vw - 0.1875rem) * 2.4779)), 5rem);
+
+  --title-font-size: clamp(1.5rem, calc(1.5rem + ((1vw - 0.1875rem) * 0.3)), 3rem);
 }
 
 * {
@@ -29,4 +32,20 @@ body {
 
 html {
   height: 100dvh;
+}
+
+@media (max-width: 1024px) {
+:root {
+    --key-size: clamp(1.4rem, calc(1.4rem + ((1vw - 0.1875rem) * 3.5359)), 3rem);
+    --key-font-size: clamp(1rem, calc(1rem + ((1vw - 0.1875rem) * 2.2099)), 2rem);
+
+    --title-font-size: clamp(18px, calc(1.125rem + ((1vw - 5.25px) * 1.6032)), 26px);
+  }
+}
+
+@media (max-width: 425px) {
+:root {
+    --key-size: clamp(1.375rem, calc(1.375rem + ((1vw - 0.1875rem) * 9.6)), 2.125rem);
+    --key-interval: 0.2rem;
+  }
 }
