--- a/hangman/components/currentState/_currentState.scss
+++ b/hangman/components/currentState/_currentState.scss
@@ -1,7 +1,10 @@
 .current-state {
   display: flex;
   gap: 1rem;
+  color: var(--color-text);
   font-size: calc(var(--key-font-size) / 2);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-shadow: 2px 2px 4px orangered;
 }
 
 @media (max-width: 1024px) {
