--- a/hangman/components/gallows/_gallows.scss
+++ b/hangman/components/gallows/_gallows.scss
@@ -5,8 +5,9 @@
   justify-content: center;
   align-items: center;
 
-  flex: 0 1 30%;
+  flex: 0 1 40%;
   aspect-ratio: 1/1;
+  max-width: 500px;
   user-select: none;
   pointer-events: none;
 }
@@ -14,15 +15,17 @@
 .gallows__img {
   position: absolute;
   width: 100%;
-  aspect-ratio: 1/1;
+  // aspect-ratio: 1/1;
 }
 
 .gallows__title {
-  position: absolute;
+  color: var(--color-key-text);
+  position: fixed;
   font-size: var(--title-font-size);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-transform: uppercase;
   text-align: center;
-  bottom: calc(var(--title-font-size) * -1);
+  bottom: 1rem;
 }
 
 .gallows__head,
@@ -33,7 +36,7 @@
 .gallows__r-leg {
   position: absolute;
   width: 100%;
-  aspect-ratio: 1/1;
+  // aspect-ratio: 1/1;
   opacity: 0;
   z-index: -1;
 
@@ -50,18 +53,12 @@
   transform: translateY(5rem);
 }
 
-.gallows__l-arm {
-  transform: translateX(5rem);
-}
-
-.gallows__r-arm {
-  transform: translateX(-5rem);
-}
-
+.gallows__l-arm,
 .gallows__l-leg {
   transform: translateX(5rem);
 }
 
+.gallows__r-arm,
 .gallows__r-leg {
   transform: translateX(-5rem);
 }
@@ -80,6 +77,7 @@
 @media (max-width: 768px) {
   .gallows {
     flex: 0 1 40%;
+    align-self: normal;
   }
 
   .gallows__head,
@@ -90,4 +88,15 @@
   .gallows__body {
     transform: translateY(0);
   }
+
+  .gallows__title {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media (max-width: 425px) {
+  .gallows {
+      flex: 0 1 30%;
+    }
 }
