--- a/hangman/components/game/_game.scss
+++ b/hangman/components/game/_game.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
 
-  flex: 0 1 70%;
+  flex: 0 1 100%;
   height: 100%;
   gap: 1rem;
 }
@@ -12,5 +12,11 @@
 @media (max-width: 768px) {
   .game {
     flex: 0 1 60%;
+  }
+}
+
+@media (max-width: 425px) {
+  .game {
+    flex: 0 1 70%;
   }
 }
