--- a/hangman/components/hint/_hint.scss
+++ b/hangman/components/hint/_hint.scss
@@ -1,7 +1,11 @@
 .hint {
   display: inline-block;
   text-align: center;
+  color: var(--color-text);
   font-size: calc(var(--key-font-size) / 2);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding-left: 1rem;
+  text-shadow: 2px 2px 2px black;
 }
 
 .hint::first-letter {
