--- a/hangman/style.css
+++ b/hangman/style.css
@@ -6,14 +6,19 @@ main {
   align-items: center;
   gap: 1rem;
   width: clamp(var(--min-width), 100%, var(--max-width));
-  margin: 0 auto;
-  padding: 1rem;
   height: 100%;
+  margin: 0 auto;
+  padding: 1rem 1rem 1rem 0;
+  background-image: url("../../../hangman/components/main/img/main.webp");
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media (max-width: 768px) {
   main {
     flex-direction: column;
+    background-image: url("../../../hangman/components/main/img/main-small.webp");
   }
 }
 .gallows {
@@ -22,8 +27,9 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex: 0 1 30%;
+  flex: 0 1 40%;
   aspect-ratio: 1/1;
+  max-width: 500px;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -33,15 +39,16 @@ main {
 .gallows__img {
   position: absolute;
   width: 100%;
-  aspect-ratio: 1/1;
 }
 
 .gallows__title {
-  position: absolute;
+  color: var(--color-key-text);
+  position: fixed;
   font-size: var(--title-font-size);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-transform: uppercase;
   text-align: center;
-  bottom: calc(var(--title-font-size) * -1);
+  bottom: 1rem;
 }
 
 .gallows__head,
@@ -52,7 +59,6 @@ main {
 .gallows__r-leg {
   position: absolute;
   width: 100%;
-  aspect-ratio: 1/1;
   opacity: 0;
   z-index: -1;
   transition-property: transform opacity z-index;
@@ -68,18 +74,12 @@ main {
   transform: translateY(5rem);
 }
 
-.gallows__l-arm {
-  transform: translateX(5rem);
-}
-
-.gallows__r-arm {
-  transform: translateX(-5rem);
-}
-
+.gallows__l-arm,
 .gallows__l-leg {
   transform: translateX(5rem);
 }
 
+.gallows__r-arm,
 .gallows__r-leg {
   transform: translateX(-5rem);
 }
@@ -98,6 +98,7 @@ main {
 @media (max-width: 768px) {
   .gallows {
     flex: 0 1 40%;
+    align-self: normal;
   }
   .gallows__head,
   .gallows__r-leg,
@@ -107,13 +108,22 @@ main {
   .gallows__body {
     transform: translateY(0);
   }
+  .gallows__title {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+@media (max-width: 425px) {
+  .gallows {
+    flex: 0 1 30%;
+  }
 }
 .game {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex: 0 1 70%;
+  flex: 0 1 100%;
   height: 100%;
   gap: 1rem;
 }
@@ -123,10 +133,19 @@ main {
     flex: 0 1 60%;
   }
 }
+@media (max-width: 425px) {
+  .game {
+    flex: 0 1 70%;
+  }
+}
 .hint {
   display: inline-block;
   text-align: center;
+  color: var(--color-text);
   font-size: calc(var(--key-font-size) / 2);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding-left: 1rem;
+  text-shadow: 2px 2px 2px black;
 }
 
 .hint::first-letter {
@@ -146,7 +165,10 @@ main {
 .current-state {
   display: flex;
   gap: 1rem;
+  color: var(--color-text);
   font-size: calc(var(--key-font-size) / 2);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-shadow: 2px 2px 4px orangered;
 }
 
 @media (max-width: 1024px) {
@@ -166,6 +188,7 @@ main {
   align-items: center;
   flex-direction: column;
   gap: var(--key-interval);
+  padding-left: 1rem;
 }
 
 .virtual-keyboard__row {
@@ -185,8 +208,15 @@ main {
   align-items: center;
   width: var(--key-size);
   height: var(--key-size);
+  color: var(--color-key-text);
   font-size: var(--key-font-size);
-  border: 1px solid black;
+  text-transform: uppercase;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  border: 1px solid var(--color-key-border);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  box-shadow: var(--color-key-shadow);
+  background-color: var(--color-key-bg);
   border-radius: 0.3rem;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -194,19 +224,31 @@ main {
 }
 
 .virtual-keyboard__key:hover {
+  box-shadow: var(--color-key-shadow-hover);
+  color: var(--color-key-text-hover);
   cursor: pointer;
 }
 
 .virtual-keyboard__key[data-succes] {
-  background-color: aqua;
+  background-color: var(--color-key-bg-success);
 }
 
 .virtual-keyboard__key[data-loose] {
-  background-color: brown;
+  background-color: var(--color-key-bg-loose);
+}
+
+.virtual-keyboard__key[data-succes],
+.virtual-keyboard__key[data-loose] {
+  box-shadow: var(--color-key-shadow-inactive);
+  color: var(--color-key-inactive);
+  border-top: var(--color-key-border);
+  border-left: var(--color-key-border);
 }
 
 .virtual-keyboard__key[data-succes]:hover,
 .virtual-keyboard__key[data-loose]:hover {
+  box-shadow: var(--color-key-shadow-inactive);
+  color: var(--color-key-inactive);
   cursor: default;
 }
 
@@ -230,8 +272,13 @@ main {
   width: var(--key-size);
   height: var(--key-size);
   font-size: var(--key-font-size);
+  text-transform: uppercase;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: transparent;
-  border: 1px solid black;
+  border: 1px solid var(--color-key-border);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  box-shadow: var(--color-key-shadow);
   border-radius: 0.3rem;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -250,8 +297,9 @@ main {
 }
 
 .question__character[data-pressed] {
-  color: black;
-  background-color: aqua;
+  color: var(--color-word);
+  font-weight: 700;
+  background-color: var(--color-key-bg-success);
 }
 
 .question__character[data-pressed]::after {
@@ -304,6 +352,20 @@ main {
   --key-interval: clamp(0.5rem, calc(0.5rem + ((1vw - 0.1875rem) * 0.354)), 1rem);
   --key-font-size: clamp(1.5rem, calc(1.5rem + ((1vw - 0.1875rem) * 2.4779)), 5rem);
   --title-font-size: clamp(1.5rem, calc(1.5rem + ((1vw - 0.1875rem) * 0.3)), 3rem);
+  --color-key-shadow: 2px 6px 8px hsla(60, 100%, 80%, 0.7),
+    6px 2px 8px hsla(0, 100%, 80%, 0.7);
+  --color-key-shadow-hover: 4px 8px 8px hsla(60, 100%, 80%, 0.9),
+    8px 4px 8px hsla(0, 100%, 80%, 0.9);
+  --color-key-shadow-inactive: inset 5px 0px 20px hsl(0, 0%, 0%);
+  --color-key-bg: rgba(0, 0, 0, 0.2);
+  --color-key-bg-success: hsla(70, 100%, 50%, 0.4);
+  --color-key-bg-loose: hsla(0, 100%, 50%, 0.2);
+  --color-key-border: hsl(200, 21%, 61%);
+  --color-key-text: hsl(200, 21%, 75%);
+  --color-key-text-hover: rgb(255, 203, 29);
+  --color-key-inactive: hsla(0, 0%, 0%, 0.3);
+  --color-text: hsl(0, 0%, 90%);
+  --color-word: hsl(0, 0%, 0%);
 }
 
 * {
@@ -318,6 +380,7 @@ body {
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
+  background-color: rgb(70, 80, 110);
 }
 
 html {
@@ -328,6 +391,8 @@ html {
   :root {
     --key-size: clamp(1.4rem, calc(1.4rem + ((1vw - 0.1875rem) * 3.5359)), 3rem);
     --key-font-size: clamp(1rem, calc(1rem + ((1vw - 0.1875rem) * 2.2099)), 2rem);
+    --color-key-bg-success: hsla(70, 50%, 50%, 1);
+    --color-key-bg-loose: hsla(0, 50%, 70%, 1);
     --title-font-size: clamp(18px, calc(1.125rem + ((1vw - 5.25px) * 1.6032)), 26px);
   }
 }
