--- a/hangman/style.scss
+++ b/hangman/style.scss
@@ -13,6 +13,21 @@
   --key-font-size: clamp(1.5rem, calc(1.5rem + ((1vw - 0.1875rem) * 2.4779)), 5rem);
 
   --title-font-size: clamp(1.5rem, calc(1.5rem + ((1vw - 0.1875rem) * 0.3)), 3rem);
+
+  --color-key-shadow: 2px 6px 8px hsla(60, 100%, 80%, 0.7),
+    6px 2px 8px hsla(0, 100%, 80%, 0.7);
+  --color-key-shadow-hover: 4px 8px 8px hsla(60, 100%, 80%, 0.9),
+    8px 4px 8px hsla(0, 100%, 80%, 0.9);
+  --color-key-shadow-inactive: inset 5px 0px 20px hsl(0, 0%, 0%);
+  --color-key-bg: rgba(0, 0, 0, 0.2);
+  --color-key-bg-success: hsla(70, 100%, 50%, 0.4);
+  --color-key-bg-loose: hsla(0, 100%, 50%, 0.2);
+  --color-key-border: hsl(200, 21%, 61%);
+  --color-key-text: hsl(200, 21%, 75%);
+  --color-key-text-hover: rgb(255, 203, 29);
+  --color-key-inactive: hsla(0, 0%, 0%, 0.3);
+  --color-text: hsl(0, 0%, 90%);
+  --color-word: hsl(0, 0%, 0%);
 }
 
 * {
@@ -27,6 +42,7 @@ body {
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
+  background-color: rgb(70, 80, 110);
   // scrollbar-gutter: stable;
 }
 
@@ -38,7 +54,8 @@ html {
 :root {
     --key-size: clamp(1.4rem, calc(1.4rem + ((1vw - 0.1875rem) * 3.5359)), 3rem);
     --key-font-size: clamp(1rem, calc(1rem + ((1vw - 0.1875rem) * 2.2099)), 2rem);
-
+    --color-key-bg-success: hsla(70, 50%, 50%, 1);
+    --color-key-bg-loose: hsla(0, 50%, 70%, 1);
     --title-font-size: clamp(18px, calc(1.125rem + ((1vw - 5.25px) * 1.6032)), 26px);
   }
 }
