--- a/hangman/components/modal/_modal.scss
+++ b/hangman/components/modal/_modal.scss
@@ -12,6 +12,10 @@
   border: none;
   border-radius: 0.5rem;
   padding: 1rem;
+  background-color: transparent;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .dialog__wrapper::backdrop {
@@ -22,19 +26,68 @@
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  gap: 0.5rem;
   width: 100%;
   height: 100%;
+  padding: 1rem;
+
+  color: var(--color-text);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   border-radius: 0.5rem;
-  border: 1px solid brown;
 }
 
 .form__btn-play {
   padding: 0.5rem 2rem;
   border: none;
   border-radius: 0.5rem;
-  color: white;
   background-color: black;
   text-transform: uppercase;
+  color: var(--color-text);
+  user-select: none;
 }
+
+.form__btn-play:hover {
+  color: rgb(243, 164, 46);
+  cursor: pointer;
+  filter: drop-shadow(2px 2px 5px rgb(243, 164, 46));
+}
+
+.form__message {
+  text-shadow: 2px 2px 4px black;
+  font-size: 2rem;
+  word-spacing: 1rem;
+  letter-spacing: 0.4rem;
+  text-shadow: 2px 2px 4px var(--color-key-text-hover);
+}
+
+.dialod_lost {
+  background-image: url("./components/modal/img/lost.webp");
+}
+
+.dialod_win {
+  background-image: url("./components/modal/img/win.webp");
+}
+
+.dialog__wrapper.dialod_win .form__message {
+  color: white;
+  font-weight: 800;
+  font-size: 2.5rem;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
+.dialog__wrapper.dialod_win .form__secret-word {
+  display: inline-block;
+  border-radius: 0.5rem;
+  color: black;
+  background-color: white;
+  padding: 0.5rem;
+}
+
+.dialog__wrapper.dialod_win .form__btn-play:hover {
+  color: rgb(243, 164, 46);
+  cursor: pointer;
+  filter: drop-shadow(2px 2px 5px rgb(255, 255, 255));
+  }
