fix: small fix css

--- a/hangman/components/modal/_modal.scss
+++ b/hangman/components/modal/_modal.scss
@@ -60,6 +60,7 @@
   word-spacing: 1rem;
   letter-spacing: 0.4rem;
   text-shadow: 2px 2px 4px var(--color-key-text-hover);
+  user-select: none;
 }
 
 .dialod_lost {
