--- a/hangman/components/currentState/_currentState.scss
+++ b/hangman/components/currentState/_currentState.scss
@@ -5,6 +5,7 @@
   font-size: calc(var(--key-font-size) / 2);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-shadow: 2px 2px 4px orangered;
+  user-select: none;
 }
 
 @media (max-width: 1024px) {
