--- a/hangman/style.css
+++ b/hangman/style.css
@@ -169,6 +169,9 @@ main {
   font-size: calc(var(--key-font-size) / 2);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-shadow: 2px 2px 4px orangered;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 @media (max-width: 1024px) {
@@ -369,6 +372,9 @@ main {
   word-spacing: 1rem;
   letter-spacing: 0.4rem;
   text-shadow: 2px 2px 4px var(--color-key-text-hover);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .dialod_lost {
