--- a/hangman/components/modal/_modal.scss
+++ b/hangman/components/modal/_modal.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  width: clamp(0px, 100%, 20rem);
+  width: clamp(255px, 50%, 35rem);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -28,10 +28,10 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  gap: 0.5rem;
+  gap: 10%;
   width: 100%;
   height: 100%;
-  padding: 1rem;
+  padding: min(10%, 3rem) 1rem;
 
   color: var(--color-text);
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -56,7 +56,7 @@
 
 .form__h1 {
   text-shadow: 2px 2px 4px black;
-  font-size: 2rem;
+  font-size: clamp(2rem, calc(2rem + ((1vw - 0.328125rem) * 8.6172)), 4.6875rem);
   word-spacing: 1rem;
   letter-spacing: 0.4rem;
   text-shadow: 2px 2px 4px var(--color-key-text-hover);
@@ -74,9 +74,8 @@
 .dialog__wrapper.dialod_win .form__h1 {
   color: white;
   font-weight: 800;
-  font-size: 2.5rem;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-color: hsl(40, 100%, 97%);
 }
 
 .dialog__wrapper.dialod_win .form__p {
