--- a/hangman/style.css
+++ b/hangman/style.css
@@ -9,7 +9,7 @@ main {
   height: 100%;
   margin: 0 auto;
   padding: 1rem 1rem 1rem 0;
-  background-image: url("../../../hangman/components/main/img/main.webp");
+  background-image: url("./components/main/img/main.webp");
   background-position: bottom left;
   background-repeat: no-repeat;
   background-size: cover;
@@ -18,7 +18,7 @@ main {
 @media (max-width: 768px) {
   main {
     flex-direction: column;
-    background-image: url("../../../hangman/components/main/img/main-small.webp");
+    background-image: url("./components/main/img/main-small.webp");
   }
 }
 .gallows {
