--- a/nonograms/src/styles/style.css
+++ b/nonograms/src/styles/style.css
@@ -1,3 +1,20 @@
-body {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   background-color: bisque;
+}
+
+.main {
+  --columns: 2;
+  --row: 2;
+
+  /* display: grid; */
+  /* grid-template-columns: repeat(var(--columns), auto); */
+  /* grid-template-rows: repeat(var(--row), auto); */
 }
