--- a/nonograms/src/components/plotContainer/plotContainer.css
+++ b/nonograms/src/components/plotContainer/plotContainer.css
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(var(--columns-count), 1fr);
     grid-template-rows: repeat(5, auto);
 
-    width: clamp(0px, 96%, 20rem);
+    width: clamp(0px, 96%, calc(1.5rem * var(--columns-count)));
     margin: 0 auto;
     aspect-ratio: 1/1;
 
