--- a/nonograms/src/components/plotContainer/cell/cell.css
+++ b/nonograms/src/components/plotContainer/cell/cell.css
@@ -5,7 +5,7 @@
 
   user-select: none;
   background-color: rgb(231, 255, 255);
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .cell[role="game"] {
@@ -22,5 +22,13 @@
 
 .cell[role="empty"] {
   background-color: rgb(255, 255, 255);
-  border: none;
+  /* border: none; */
+}
+
+.cell[row] {
+  border-bottom: 2px solid black;
+}
+
+.cell[col] {
+  border-right: 2px solid black;
 }
