--- a/nonograms/src/components/plotContainer/plotContainer.css
+++ b/nonograms/src/components/plotContainer/plotContainer.css
@@ -9,6 +9,8 @@
     margin: 0 auto;
     aspect-ratio: 1/1;
 
-    border: 1px solid black;
+    border: 2px solid black;
+    border-bottom: none;
+    border-right: none;
     background-color: rgb(200, 200, 200);
   }
