--- a/nonograms/src/components/header/header.css
+++ b/nonograms/src/components/header/header.css
@@ -1,5 +1,35 @@
 .header {
-  height: 6rem;
   background-color: rgb(231, 255, 255);
   border-bottom: 1px solid grey;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.game-select {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.game-select_fieldset {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+  padding: 0.5rem;
+
+  & .fieldset_label {
+    margin-right:1rem;
+  }
+
+  & .fieldset_legend {
+    margin: 0 auto;
+    padding: 0 1rem;
+  }
 }
