--- a/nonograms/src/components/plotContainer/plotContainer.css
+++ b/nonograms/src/components/plotContainer/plotContainer.css
@@ -9,7 +9,7 @@
     margin: 0 auto;
     aspect-ratio: 1/1;
 
-    border: 2px solid black;
+    border: 2px solid var(--border-color);
     border-bottom: none;
     border-right: none;
     background-color: rgb(200, 200, 200);
