--- a/nonograms/src/styles/style.css
+++ b/nonograms/src/styles/style.css
@@ -10,7 +10,7 @@
   --cell-border-color: rgb(200, 200, 200);
 
   --border-color: rgb(0, 0, 0);
-
+  --score-lastgame: rgb(165, 245, 140);
   --common-text-color: rgb(0, 0, 0);
 }
 
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   padding: 1rem;
 
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -45,4 +45,9 @@
     cursor: pointer;
     filter: brightness(1.2);
   }
+}
+
+.gameover {
+  pointer-events: none;
+  filter: blur(1px) opacity(0.7);
 }
