--- a/nonograms/src/components/score/score.css
+++ b/nonograms/src/components/score/score.css
@@ -45,6 +45,12 @@
   }
 }
 
+.score_h1 {
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  text-align: center;
+}
+
 .score_show {
   transform: translateX(-100%);
 }
