feat: add button random game

--- a/nonograms/src/components/schemeSelector/schemeSelector.css
+++ b/nonograms/src/components/schemeSelector/schemeSelector.css
@@ -1,8 +1,10 @@
 .scheme-container {
   display: flex;
-  gap: 1rem;
-  padding: 1rem;
+  flex: 0 0 auto;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
 
+  border-radius: var(--border-radius);
   border: 1px solid var(--border-color);
 }
 
