--- a/nonograms/src/components/gameSelector/gameSelector.css
+++ b/nonograms/src/components/gameSelector/gameSelector.css
@@ -1,12 +1,15 @@
 .header {
+  flex: 0 0 auto;
+  width: 100%;
   border-bottom: 1px solid var(--border-color);
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0 1rem 0.5rem;
 }
 
 .game-select {
@@ -20,8 +23,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: clamp(1rem, 100%, 25rem);
   gap: 0.25rem;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: var(--border-radius);
 
   & .fieldset_label {
     margin-right:1rem;
