--- a/nonograms/src/components/score/score.css
+++ b/nonograms/src/components/score/score.css
@@ -1,10 +1,24 @@
-.container {
-  --w : clamp(10rem, 90%, 20rem);
+.dialog {
+  left: -10rem;
+  border: none;
+}
 
+.dialog:has(div.score_show) {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  height: 100dvh;
+  inset: 0;
+
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.container {
+  --w : clamp(10rem, 90%, 25rem);
   position: fixed;
   z-index: 2;
   top: 2rem;
-  right: calc(var(--w)*-1);
+  left: 100%;
   width: var(--w);
   min-height: 10rem;
 
@@ -13,6 +27,7 @@
   background-color: var(--blocks-background);
   border: 2px solid var(--border-color);
   filter: drop-shadow(0.5rem 0.5rem 0.5rem var(--score-shadow));
+  transition-delay: 100ms;
   transition-duration: 200ms;
 }
 
@@ -53,6 +68,7 @@
 
 .score_show {
   transform: translateX(-100%);
+  pointer-events: all;
 }
 
 .container__records {
