--- a/nonograms/src/components/schemeSelector/schemeSelector.css
+++ b/nonograms/src/components/schemeSelector/schemeSelector.css
@@ -12,3 +12,10 @@
   color: var(--common-text-color);
   background-color: var(--blocks-background);
 }
+
+
+@media (hover: hover) {
+  .scheme-select:hover {
+    cursor: pointer;
+  }
+}
