--- a/nonograms/src/components/buttons/cavein/btnCavein.css
+++ b/nonograms/src/components/buttons/cavein/btnCavein.css
@@ -1,23 +1,9 @@
-.btn_container {
-  container-type: inline-size;
-  width: 100%;
-  height: 100%;
-}
-
 .btn_cavein {
+  flex: 1 0 10%;
   width: 100%;
   height: 100%;
-  padding: 0.2rem;
-
-  border-top: 3px solid rgb(200, 200, 200);
-  border-right: 3px solid rgb(100, 100, 100);
-  border-bottom: 3px solid rgb(70, 70, 70);
-  border-left: 3px solid rgb(170, 170, 170);
-  background-color: transparent;
 
   & svg {
-    width: clamp(0px, 100%, 2rem);
-    aspect-ratio: 1/1;
     transition-duration: 200ms;
     fill: var(--border-color);
 
