--- a/nonograms/src/styles/style.css
+++ b/nonograms/src/styles/style.css
@@ -18,6 +18,7 @@
   --color-warning-shadow: 0, 0, 0;
 
   --border-radius: 0.2rem;
+  --btn-icon-hover: rgba(90, 0, 255, 1);
 }
 
 * {
@@ -53,6 +54,12 @@ html {
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3rem;
+
+  height: 100%;
   color: var(--common-text-color);
   padding: 0.2rem 0.3rem;
   border-radius: 0.3rem;
@@ -62,7 +69,7 @@ html {
   user-select: none;
 
   & svg {
-    width: 2rem;
+    width: 1.5rem;
     height: auto;
   }
 }
@@ -71,6 +78,10 @@ html {
   .button:hover {
     cursor: pointer;
     filter: brightness(1.2);
+
+    & svg {
+      fill: var(--btn-icon-hover);
+    }
   }
 }
 
