--- a/nonograms/src/components/buttons/mode/btnSwitchMode.css
+++ b/nonograms/src/components/buttons/mode/btnSwitchMode.css
@@ -7,9 +7,9 @@
   align-items: center;
   gap: 0.5rem;
 
-  width: 96%;
+  width: 100%;
   height: auto;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 
   & span {
       flex: 1 1 60%;
