--- a/nonograms/src/components/plotContainer/plotContainer.css
+++ b/nonograms/src/components/plotContainer/plotContainer.css
@@ -3,11 +3,11 @@
 
     display: grid;
     grid-template-columns: repeat(var(--columns-count), 1fr);
-    grid-template-rows: repeat(5, auto);
+    /* grid-template-rows: 1fr; */
 
-    width: clamp(0px, 96%, calc(1.5rem * var(--columns-count)));
-    margin: 0 auto;
-    aspect-ratio: 1/1;
+    /* width: clamp(0px, 96%, calc(var(--cell-size) * var(--columns-count))); */
+    /* margin: 0 auto; */
+    /* aspect-ratio: 1/1; */
 
     border: 2px solid var(--border-color);
     border-bottom: none;
