--- a/nonograms/src/components/footer/footer.css
+++ b/nonograms/src/components/footer/footer.css
@@ -1,7 +1,8 @@
 .footer {
   display: flex;
+  width: clamp(320px, 100%, 1024px);
   flex: 0 0 auto;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: clamp(5px, 2%, 20px);
 }
