--- a/nonograms/src/components/gameSelector/gameSelector.css
+++ b/nonograms/src/components/gameSelector/gameSelector.css
@@ -36,6 +36,10 @@
     margin: 0 auto;
     padding: 0 1rem;
   }
+
+  & input {
+    accent-color: var(--btn-icon-hover);
+  }
 }
 
 .game-select_selector {
