--- a/nonograms/src/components/header/schemeSelector/schemeSelector.css
+++ b/nonograms/src/components/header/schemeSelector/schemeSelector.css
@@ -1,18 +1,8 @@
-.scheme-container {
-  display: flex;
-  flex: 0 0 auto;
-  gap: 0.5rem;
-  padding: 0.5rem 1rem;
-
-  border-radius: var(--border-radius);
-  border: 1px solid var(--border-color);
-}
-
 .scheme-select {
+  margin-left: 0.5rem;
   color: var(--common-text-color);
   background-color: var(--blocks-background);
 }
-
 
 @media (hover: hover) {
   .scheme-select:hover {
