--- a/nonograms/src/components/header/muteSound/muteSound.css
+++ b/nonograms/src/components/header/muteSound/muteSound.css
@@ -1,6 +1,20 @@
 .container-mute {
   width: 2rem;
   height: 2rem;
+  transition-duration: 200ms;
 
-  background-color: blue;
+  & svg {
+    width: 100%;
+    height: 100%;
+    fill: var(--border-color);
+  }
+}
+
+@media (hover: hover) {
+  .container-mute:hover {
+    & svg {
+      cursor: pointer;
+      fill: var(--btn-icon-hover);
+    }
+  }
 }
