--- a/nonograms/src/components/score/score.css
+++ b/nonograms/src/components/score/score.css
@@ -22,6 +22,8 @@
   width: var(--w);
   min-height: 10rem;
 
+  padding: 1rem;
+
   color: var(--common-text-color);
   border-radius: 0.5rem;
   background-color: var(--blocks-background);
@@ -61,7 +63,7 @@
 }
 
 .score_h1 {
-  padding: 0.5rem 1rem;
+  padding-bottom: 1rem;
   font-size: 1.2rem;
   text-align: center;
 }
@@ -74,7 +76,6 @@
 .container__records {
   display: grid;
   grid-template-columns: 3fr 1fr 2fr;
-  margin: 1rem;
   gap: 0.2rem;
 
   min-height: 1rem;
@@ -83,7 +84,13 @@
   border-radius: 0.3rem;
 
   & div:nth-child(-n+3) {
+    width: 100%;
+    font-size: 0.8rem;
+    font-weight: 700;
+    letter-spacing: 2px;
     border-bottom: 1px solid var(--border-color);
+    text-transform: uppercase;
+    text-align: center;
   }
 
   & div:nth-child(3n-1) {
@@ -95,6 +102,38 @@
   }
 }
 
+.container__records:has(div.record_last-game) {
+  &~.score-footer {
+      display: flex;
+  }
+}
+
 .record_last-game {
   background-color: var(--score-lastgame);
+}
+
+.score-footer {
+  display: none;
+  align-items: center;
+  padding-top: 0.5rem;
+  padding-left: 1rem;
+  gap: 0.5rem;
+
+  & .score-footer__icon {
+    --size: 0.7rem;
+    display: inline-block;
+    width: var(--size);
+    height: var(--size);
+
+    background-color: var(--score-lastgame);
+    border: 1px solid var(--border-color);
+    border-radius: 0.3rem;
+  }
+
+
+  & .score-footer__text {
+    font-size: 0.8rem;
+    text-transform: lowercase;
+    font-style: italic;
+  }
 }
