--- a/news-api/src/components/view/news/news.css
+++ b/news-api/src/components/view/news/news.css
@@ -1,3 +1,8 @@
+.news {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .news__item {
     display: flex;
     flex-direction: column;
@@ -9,6 +14,7 @@
     font-family: Arial, sans-serif;
     border-radius: 5px;
     overflow: hidden;
+    filter: drop-shadow(0 0 0.5rem var(--color));
 }
 
 .news__item:hover .news__meta-photo {
@@ -124,7 +130,7 @@
 @media (min-width: 640px) {
     .news__item {
         flex-direction: row;
-        max-width: 700px;
+        max-width: 1024px;
     }
 
     .news__item .news__meta {
