--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
-    height: 120px;
-    overflow: auto;
+    padding: 1rem;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
 }
@@ -37,11 +36,10 @@
   --color-background-container: color-mix(in srgb, var(--color-background) 90%, var(--color));
   --color-container: color-mix(in srgb, var(--color) 80%, var(--color-background));
 
-  box-sizing: border-box;
   width: clamp(15rem, 100%, 30rem);
   padding: 0.5rem 1rem;
   margin: 0 auto;
-  background-color: var(--color-background);
+  /* background-color: var(--color-background); */
 }
 
 .sources__select {
