--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -1,22 +1,64 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html, body {
+  height: 100dvh;
+  scroll-behavior: smooth;
+  scrollbar-gutter: stable;
+}
+
 body {
   --color-background: #17181c;
   --color: #fff;
+
+    display: flex;
+    flex-direction: column;
 
     color: var(--color);
     background: var(--color-background);
     font-family: sans-serif;
 }
 
+body:before {
+  content: '';
+  box-sizing: border-box;
+  display: block;
+  position: fixed;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+
+  background-image: url("./assets/img/background.webp");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.2;
+}
+
 header {
-    padding: 10px 30px;
+    flex: 0 0 auto;
+    padding: 2rem 1rem 1rem;
 }
 
 header h1 {
     font-size: 40px;
     font-weight: 800;
+    text-align: center;
+    filter: drop-shadow(0 0 0.5rem var(--color));
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
 }
 
 footer {
+    flex: 0 0 auto;
     height: 100px;
     display: flex;
     align-items: center;
