--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -13,9 +13,11 @@ html, body {
 body {
   --color-background: #17181c;
   --color: #fff;
+  --max-width: 64rem;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     color: var(--color);
     background: var(--color-background);
@@ -57,24 +59,64 @@ header h1 {
   flex: 1 0 auto;
 }
 
-footer {
+.footer {
     flex: 0 0 auto;
-    height: 100px;
+    width: clamp(1rem, 100%, var(--max-width));
+    height: 4rem;
+    padding: 0 2rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    font-size: 0.8rem;
+    color: var(--color);
+    user-select: none;
 }
-footer .copyright {
-    font-size: 14px;
-    color: #333;
-    text-align: center;
+
+.footer__repo,
+.footer__year,
+.footer__logo {
+  display: flex;
+  flex: 0 1 100%;
+  transition-duration: 200ms;
 }
-footer .copyright a {
-    color: #444;
+
+.footer__repo {
+  & a {
+    color: var(--color);
+    text-decoration: none;
+  }
 }
-footer .copyright a:hover {
-    color: #555;
+
+.footer__year {
+  justify-content: center;
 }
-footer .copyright:before {
-    content: '©';
+
+.footer__logo {
+  justify-content: end;
+
+  & svg {
+    fill: var(--color);
+    width: 4rem;
+  }
+
+  .st5 {
+    fill: var(--color-background);
+  }
+}
+
+@media (hover: hover) {
+  .footer__repo {
+    & a {
+      &:hover {
+        color: color-mix(in srgb, var(--color) 80%, var(--color-background) 20%);
+      }
+    }
+  }
+
+  .footer__logo {
+    &:hover {
+      & svg {
+        fill: color-mix(in srgb, var(--color) 80%, var(--color-background) 20%);
+      }
+    }
+  }
 }
